# pydantic-ai-ecosystem

./: .gitignore  GOVERNANCE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
catalog/: integrations.toml
fanout/2026-04-23-ecosystem-wave-2/: existing-1-user-goals.prompt.md  existing-2-playwright-localstack.prompt.md  existing-3-shared-base.prompt.md  packages-1-roadmap.prompt.md  packages-2-official-mcp-survey.prompt.md  packages-3-scale-rules.prompt.md
scripts/: __init__.py  ci_matrix.py  integration_priority.py  scaffold_partner_package.py
templates/partner_mcp/: README.md.tmpl  package___init__.py.tmpl  package__capability.py.tmpl  pyproject.toml.tmpl  test_capability.py.tmpl
tests/: conftest.py  mcp_browser_server.py  mcp_partner_server.py  test_ci_matrix.py  test_integration_priority.py  test_scaffold_partner_package.py
tests/pydantic_ai_aws/: test_aws_smoke.py
tests/pydantic_ai_github/: test_github_capability.py
tests/pydantic_ai_localstack/: test_localstack_capability.py
tests/pydantic_ai_logfire/: test_logfire_capability.py
tests/pydantic_ai_notion/: test_notion_capability.py
tests/pydantic_ai_partner_mcp/: test_partner_mcp_capability.py
tests/pydantic_ai_playwright/: test_playwright_capability.py
tests/pydantic_ai_slack/: test_slack_capability.py
