[project]
name = "pydantic-ai-ecosystem"
version = "0.0.0"
description = "Workspace root for Pydantic AI ecosystem packages."
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
  "mkdocs-material>=9.6",
  "mkdocs>=1.6",
  "pyright>=1.1.405",
  "pytest-asyncio>=1.2",
  "pytest>=8.4",
  "ruff>=0.12.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["packages", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: tests that require local services or external executables",
]

[tool.coverage.run]
branch = true
source = ["packages"]
